fixed welcome page display on smaller laptop screens

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -4,3 +4,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap');
+
+@media screen and (min-width: 768px) {
+    html,
+    body {
+        font-size: 16px;
+    }
+}
